# My-Assistant-RAG

./: .env.example  .gitignore  README.md  abhishek_profile.md  agent.py  check_setup.py  ingest.py  profile_template.md  pyproject.toml  rag.py  render.yaml  server.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
knowledge/: company.md  menu.md  products.md
