[project]
name = "first-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.8.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "replicate>=1.0.7",
    "python-multipart>=0.0.32",
    "langchain-core>=0.3.0",
]
